# usb-midi-cc

./: CMakeLists.txt  link.ld  readme.md
src/: CMakeLists.txt  config.cc  config.hh  emulated.hh  main.cc  quota.cc  quota.hh
src/pio/: CMakeLists.txt  tm7711.cc  tm7711.hh  tm7711.pio  ws2812.cc  ws2812.hh  ws2812.pio
src/usb/: CMakeLists.txt  tusb_config.h  tusb_descriptors.c
src/util/: colorful.hh  map.hh
